--- a/app/src/main/res/layout/activity_hotel_traveler_main_view.xml
+++ b/app/src/main/res/layout/activity_hotel_traveler_main_view.xml
@@ -57,7 +57,8 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="36sp"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/font4"/>
 
 
                 <Button
@@ -74,7 +75,8 @@
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:backgroundTint="@color/theme_color" />
+                    app:backgroundTint="@color/theme_color"
+                    android:fontFamily="@font/font4"/>
 
 
                 <TextView
@@ -84,7 +86,8 @@
                     android:text="@string/dis_hotel_rating"
                     android:textColor="@color/black"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:id="@+id/HotelRating"
@@ -93,7 +96,7 @@
                     android:layout_marginTop="0dp"
                     android:gravity="center_horizontal"
                     android:text="@string/dummy_title"
-
+                    android:fontFamily="@font/font4"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -104,7 +107,8 @@
                     android:text="@string/dis_hotel_amenities"
                     android:textColor="@color/black"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:id="@+id/hotelAmenities"
@@ -113,7 +117,7 @@
                     android:layout_marginTop="0dp"
                     android:gravity="center_horizontal"
                     android:text="@string/dummy_title"
-
+                    android:fontFamily="@font/font4"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -124,7 +128,8 @@
                     android:text="@string/dis_hotel_Address"
                     android:textColor="@color/black"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:id="@+id/hotelAddress"
@@ -133,7 +138,7 @@
                     android:layout_marginTop="0dp"
                     android:gravity="center_horizontal"
                     android:text="@string/dummy_title"
-
+                    android:fontFamily="@font/font4"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -144,7 +149,8 @@
                     android:text="@string/dis_hotel_Contact"
                     android:textColor="@color/black"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:id="@+id/hotelContact"
@@ -153,7 +159,7 @@
                     android:layout_marginTop="0dp"
                     android:gravity="center_horizontal"
                     android:text="@string/dummy_title"
-
+                    android:fontFamily="@font/font4"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -164,7 +170,8 @@
                     android:text="@string/dis_hotel_City"
                     android:textColor="@color/black"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:id="@+id/hotelCity"
@@ -173,7 +180,7 @@
                     android:layout_marginTop="0dp"
                     android:gravity="center_horizontal"
                     android:text="@string/dummy_title"
-
+                    android:fontFamily="@font/font4"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -184,7 +191,8 @@
                     android:text="@string/dis_hotel_desc"
                     android:textColor="@color/black"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:id="@+id/hotelDescription"
@@ -193,7 +201,7 @@
                     android:layout_marginTop="0dp"
                     android:gravity="center_horizontal"
                     android:text="@string/dummy_title"
-
+                    android:fontFamily="@font/font4"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -211,7 +219,8 @@
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:backgroundTint="@color/theme_color" />
+                    app:backgroundTint="@color/theme_color"
+                    android:fontFamily="@font/font4"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -220,7 +229,8 @@
                     android:textStyle="bold"
                     android:text="@string/user_review_title"
                     android:textColor="@color/black"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/font4"/>
             </LinearLayout>
 
         </RelativeLayout>
