--- a/app/src/main/res/layout-v21/action_bar.xml
+++ b/app/src/main/res/layout-v21/action_bar.xml
@@ -29,7 +29,8 @@
             android:text="@string/dummy_title"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/font4"/>
 
     </RelativeLayout>
 
