--- a/app/src/main/res/layout/activity_book_hotel.xml
+++ b/app/src/main/res/layout/activity_book_hotel.xml
@@ -33,19 +33,18 @@
         android:id="@+id/checkOutDate"
         android:layout_width="@dimen/ButtonWidth"
         android:layout_height="@dimen/ButtonHeight"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/rounded_button"
         android:ems="10"
         android:fontFamily="@font/font4"
         android:gravity="center"
-        android:letterSpacing="0"
         android:hint="@string/hotelBookPageF2"
         android:importantForAutofill="no"
-        android:textSize="20sp"
+        android:letterSpacing="0"
         android:textColor="@color/edit_text_color"
+        android:textSize="20sp"
         app:backgroundTint="@color/inputField_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkInDate" />
 
@@ -68,13 +67,14 @@
         android:id="@+id/numberOfRooms"
         android:layout_width="112dp"
         android:layout_height="43dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
+        android:paddingStart="25dp"
         android:background="@drawable/rounded_button"
         android:spinnerMode="dropdown"
-        app:backgroundTint="@color/inputField_color"
         android:textColor="@color/edit_text_color"
+        app:backgroundTint="@color/inputField_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.317"
+        app:layout_constraintHorizontal_bias="0.307"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/checkOutDate"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/numberOfRooms"
         app:layout_constraintEnd_toEndOf="@+id/numberOfRooms"
-        app:layout_constraintHorizontal_bias="0.852"
+        app:layout_constraintHorizontal_bias="0.761"
         app:layout_constraintStart_toStartOf="@+id/numberOfRooms"
         app:layout_constraintTop_toTopOf="@+id/numberOfRooms"
         app:layout_constraintVertical_bias="0.578"
@@ -95,15 +95,16 @@
         android:id="@+id/bookHotelExtraDetails"
         android:layout_width="@dimen/ButtonWidth"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="27dp"
         android:width="@dimen/bookHotelPageF4Width"
         android:background="@drawable/rounded_button"
         android:ems="10"
         android:fontFamily="@font/font4"
         android:gravity="center_horizontal"
+        android:paddingTop="10dp"
         android:hint="@string/hotelBookPageF3"
         android:inputType="textMultiLine"
-        android:minLines="8"
+        android:minLines="10"
         android:textColor="@color/edit_text_color"
         android:textSize="20sp"
         app:backgroundTint="@color/inputField_color"
