--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -7,7 +7,7 @@
     tools:context=".EditReview">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/editReviewBtn"
         android:layout_width="375dp"
         android:layout_height="72dp"
         android:layout_marginBottom="5dp"
@@ -26,7 +26,7 @@
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <EditText
-        android:id="@+id/textView9"
+        android:id="@+id/review"
         android:layout_width="368dp"
         android:layout_height="240dp"
         android:layout_marginStart="-1dp"
@@ -52,13 +52,13 @@
         tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
 
     <RatingBar
-        android:id="@+id/rating_bar2"
+        android:id="@+id/ratingBar"
         android:layout_width="245dp"
         android:layout_height="40dp"
         android:layout_marginTop="320dp"
         android:numStars="5"
         android:stepSize="0.5"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintBottom_toTopOf="@+id/review"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:contentDescription="@string/string_rating"
-        app:layout_constraintBottom_toTopOf="@+id/rating_bar2"
+        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_rating" />
