adding fully completed update functionality to hotels

--- a/app/src/main/res/layout/activity_hotel_hotel_owner_main_view.xml
+++ b/app/src/main/res/layout/activity_hotel_hotel_owner_main_view.xml
@@ -218,7 +218,7 @@
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:backgroundTint="@color/theme_color"
+                    app:backgroundTint="@color/yellow"
                     android:fontFamily="@font/font4"/>
 
                 <Button
