--- a/app/src/main/res/layout/activity_add_hotel.xml
+++ b/app/src/main/res/layout/activity_add_hotel.xml
@@ -34,12 +34,12 @@ tools:context=".AddHotel">
             android:backgroundTint="@color/inputField_color"
             android:gravity="center"
             android:hint="@string/hotel_name"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:padding="20dp"
             android:textColor="@color/edit_text_color"
             android:textSize="20sp"
-            tools:ignore="TextContrastCheck"
-            android:importantForAutofill="no" />
+            tools:ignore="TextContrastCheck" />
 
         <EditText
             android:id="@+id/hotelAddress"
