--- a/app/src/main/res/layout/activity_add_package.xml
+++ b/app/src/main/res/layout/activity_add_package.xml
@@ -8,26 +8,31 @@
     tools:layout_editor_absoluteY="1dp"
     android:fillViewport="true">
 
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".AddPackage">
+    <include
+        android:id="@+id/include"
+        layout="@layout/action_bar" />
 
     <EditText
         android:id="@+id/Name"
         android:hint="@string/name"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:importantForAutofill="no"
         android:layout_width="375dp"
         android:layout_height="72dp"
         android:background="@drawable/rounded_text"
         android:gravity="center"
         android:fontFamily="@font/poppins_regular"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:inputType="textPersonName"/>
 
     <EditText
         android:id="@+id/numberOfGuest"
@@ -40,10 +45,11 @@
         android:gravity="center"
         android:hint="@string/number"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Name" />
+        app:layout_constraintTop_toBottomOf="@+id/Name"
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/feePerDay"
@@ -55,11 +61,12 @@
         android:background="@drawable/rounded_text"
         android:gravity="center"
         android:fontFamily="@font/poppins_regular"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/numberOfGuest" />
+        app:layout_constraintTop_toBottomOf="@+id/numberOfGuest"
+        android:inputType="numberDecimal"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -90,7 +97,7 @@
             style="@style/custom_chip_style"
             android:layout_width="141dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/air"
             android:textColor="@color/black"
@@ -101,7 +108,7 @@
             style="@style/custom_chip_style"
             android:layout_width="128dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/housekeeping"
             android:textColor="@color/black"
@@ -112,7 +119,7 @@
             style="@style/custom_chip_style"
             android:layout_width="106dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/tel"
             android:textColor="@color/black"
@@ -123,7 +130,7 @@
             style="@style/custom_chip_style"
             android:layout_width="61dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/sofa"
             android:textColor="@color/black"
@@ -134,7 +141,7 @@
             style="@style/custom_chip_style"
             android:layout_width="58dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/desk"
             android:textColor="@color/black"
@@ -145,7 +152,7 @@
             style="@style/custom_chip_style"
             android:layout_width="53dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_marginStart="2dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/safe"
             android:textColor="@color/black"
@@ -156,7 +163,7 @@
             style="@style/custom_chip_style"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:gravity="center"
             android:text="@string/minibar"
@@ -168,7 +175,7 @@
             style="@style/custom_chip_style"
             android:layout_width="109dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/refrigerator"
             android:textColor="@color/black"
@@ -179,18 +186,19 @@
             style="@style/custom_chip_style"
             android:layout_width="159dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/private_bathrooms"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipBottledWater"
             style="@style/custom_chip_style"
             android:layout_width="126dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/bottled_water"
             android:textColor="@color/black"
@@ -201,7 +209,7 @@
             style="@style/custom_chip_style"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/television"
             android:textColor="@color/black"
@@ -236,7 +244,7 @@
             style="@style/custom_chip_style"
             android:layout_width="89dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/city_view"
             android:textColor="@color/black"
@@ -247,7 +255,7 @@
             style="@style/custom_chip_style"
             android:layout_width="139dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/landmark_view"
             android:textColor="@color/black"
@@ -258,7 +266,7 @@
             style="@style/custom_chip_style"
             android:layout_width="139dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/family_rooms"
             android:textColor="@color/black"
@@ -269,7 +277,7 @@
             style="@style/custom_chip_style"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/non_smoking_rooms"
             android:textColor="@color/black"
@@ -280,7 +288,7 @@
             style="@style/custom_chip_style"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/smoking_rooms"
             android:textAlignment="center"
@@ -297,7 +305,7 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
-        android:hint="Description"
+        android:hint="@string/description"
         android:importantForAutofill="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -317,16 +325,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="1015dp"
-        app:layout_constraintTop_toBottomOf="@+id/packageDescription"/>
+        app:layout_constraintTop_toBottomOf="@+id/packageDescription"
+        android:inputType="number"/>
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="120dp"
         android:layout_height="31dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="@font/poppins_regular"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/black"
         android:text="@string/refundable"
         app:layout_constraintEnd_toEndOf="parent"
@@ -337,11 +346,12 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
-        android:layout_marginLeft="150dp"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/numRooms" />
+        app:layout_constraintTop_toBottomOf="@+id/numRooms"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Button
         android:id="@+id/packageSubmitBtn"
@@ -352,7 +362,7 @@
         android:fontFamily="@font/poppins_regular"
         android:gravity="center"
         android:text="@string/add_package"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:backgroundTint="@color/theme_color"
         app:layout_constraintEnd_toEndOf="parent"
