--- a/app/src/main/res/layout-v21/action_bar_package.xml
+++ b/app/src/main/res/layout-v21/action_bar_package.xml
@@ -35,9 +35,9 @@
             android:id="@+id/addPkgBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_add_24"
             android:layout_alignParentRight="true"
-            android:backgroundTint="@color/black"/>
+            android:backgroundTint="@color/black"
+            android:src="@drawable/ic_baseline_add_24" />
 
 
     </RelativeLayout>
