--- a/app/src/main/res/layout/activity_all_packages.xml
+++ b/app/src/main/res/layout/activity_all_packages.xml
@@ -1,31 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="409dp"
-    android:layout_height="wrap_content"
-    tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="1dp"
-    tools:context=".AllPackages"
-    android:fillViewport="true">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".AllPackages">
 
     <include
-        android:id="@+id/include"
-        layout="@layout/action_bar_package"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="7dp" />
+        android:id="@+id/include1"
+        layout="@layout/action_bar_package"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:id="@+id/allPackagesRecView">
-
-
-
-
-
-</androidx.recyclerview.widget.RecyclerView>
-
-</ScrollView>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
