--- a/app/src/main/res/layout/activity_package_main_view.xml
+++ b/app/src/main/res/layout/activity_package_main_view.xml
@@ -11,7 +11,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".PackageMainView">
 
     <TextView
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -127,7 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -157,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -191,7 +191,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -221,7 +221,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="Title"
+        android:text="@string/title"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
