--- a/app/src/main/res/layout/activity_hotel_traveler_main_view.xml
+++ b/app/src/main/res/layout/activity_hotel_traveler_main_view.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/action_bar" />
+        layout="@layout/action_bar_with_fav" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -56,9 +56,10 @@
                     android:text="@string/dummy_title"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:textSize="36sp"
+                    android:textSize="32sp"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/font4"/>
+                    android:fontFamily="@font/font4"
+                    android:gravity="center_horizontal"/>
 
 
                 <Button
@@ -234,10 +235,8 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/travelerReviews"
-                    android:layout_below="@+id/TR_home_action_bar"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
