--- a/app/src/main/res/layout/main_action_bar.xml
+++ b/app/src/main/res/layout/main_action_bar.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="26dp"
+            android:layout_marginEnd="26dp"
             android:src="@drawable/ic_baseline_search_24" />
 
     </RelativeLayout>
@@ -50,6 +50,7 @@
         >
 
         <EditText
+            android:id="@+id/searchText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_button"
@@ -66,7 +67,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_search_24"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"/>
 
         <ImageView
@@ -75,7 +76,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_close_24"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"/>
 
 
