--- a/app/src/main/res/layout/main_action_bar.xml
+++ b/app/src/main/res/layout/main_action_bar.xml
@@ -63,6 +63,7 @@
             android:paddingEnd="44dp" />
 
         <ImageView
+            android:id="@+id/searchbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_search_24"
