hotel owner all bookings view-partial

--- a/app/src/main/res/menu/traveler_main_menu.xml
+++ b/app/src/main/res/menu/traveler_main_menu.xml
@@ -8,6 +8,10 @@
             android:title="@string/MenuTRYourProfile" />
 
         <item
+            android:id="@+id/TRTouristAttraction"
+            android:title="@string/MenuTRTouristAttraction" />
+
+        <item
             android:id="@+id/TRHotels"
             android:title="@string/MenuTRHotels" />
 
