--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="green">#D6FBE9</color>
     <color name="topic_color">#21995F</color>
     <color name="theme_colour">#4FDB98</color>
-
+    <color name="grey">#B6B6B6</color>
 </resources>
