--- a/app/src/main/res/layout/ownerreviewlist.xml
+++ b/app/src/main/res/layout/ownerreviewlist.xml
@@ -33,7 +33,8 @@
             android:numStars="5"
             android:stepSize="0.5"
             tools:ignore="SpeakableTextPresentCheck"
-            android:isIndicator="true"/>
+            android:isIndicator="true"
+            />
 
         <TextView
             android:id="@+id/travelerReview"
@@ -43,43 +44,6 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="20dp"
             android:text="@string/hoteluserViewDData7_2" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/editReviewBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_button"
-                app:backgroundTint="@color/theme_color"
-                android:fontFamily="@font/font4"
-                android:importantForAutofill="no"
-                android:text="Edit"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:layout_marginEnd="7dp"
-                />
-
-            <Button
-                android:id="@+id/deleteReviewBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_button"
-                app:backgroundTint="@color/red"
-                android:fontFamily="@font/font4"
-                android:importantForAutofill="no"
-                android:text="Delete"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="12sp" />
-            />
-
-        </LinearLayout>
-
 
     </LinearLayout>
 
