--- a/app/src/main/res/layout/hotel_owner_all_bookings_item.xml
+++ b/app/src/main/res/layout/hotel_owner_all_bookings_item.xml
@@ -22,7 +22,8 @@
             android:layout_centerVertical="true"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingBottom="10dp">
+            android:paddingBottom="10dp"
+            android:paddingTop="5dp">
 
 
             <TextView
