--- a/app/src/main/res/layout/ownerreviewlist.xml
+++ b/app/src/main/res/layout/ownerreviewlist.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="10dp"
+            android:textSize="15sp"
             android:gravity="center_horizontal"
             android:textStyle="bold"
             android:text="@string/hoteluserViewDData7_2" />
