--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -46,6 +46,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="10dp"
             android:gravity="center_horizontal"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:text="@string/hoteluserViewDData7_2" />
 
